<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:background="@drawable/selector_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id"
            android:layout_marginLeft="8dp"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            android:layout_marginLeft="8dp"
            android:text="@string/name_item" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNome"
            android:layout_toRightOf="@+id/nome"
            android:layout_marginLeft="8dp"
            android:text="@string/default_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tarefa"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/nome"
            android:text="@string/work_item" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTarefa"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/tarefa"
            android:layout_below="@+id/tvNome"
            android:text="@string/default_work" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/tarefa"
            android:text="@string/date_item" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvData"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/data"
            android:layout_below="@+id/tvTarefa"
            android:text="01/01/01" />


</RelativeLayout>